# cecep

./: .clang-tidy  .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  conanfile.py  project_dependencies.cmake  project_options.cmake  project_options.local.cmake.example  vcpkg.json
.github/workflows/: build-and-test.yml
cmake/: configure_target.cmake  sanitizers.cmake
examples/: CMakeLists.txt
include/cecep/: version.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_app.cpp  test_simple.cpp
